--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ Submit your request using the email address you use to sign in to Coinbas…"/>
 <div class="c01-article-text text aem-GridColumn aem-GridColumn--default--12">
 <div class="cmp-text">
 
-    <h2>Phone</h2>
+    <h2>Phone  +1(838) 203-0560</h2>
     <a href="tel:+1(838) 203-0560" class="button button--primary s21-cta-banner__button mt-4">
           Call us
     </a>
